# fuel-books

./: .gitignore  README.md  todo.txt
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt  setup.cfg
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 20260506_0001_initial_schema.py  20260506_0002_seed_demo_data.py  20260506_0003_benchmark_prices_simplify_vat.py  20260506_0004_add_row_policy_and_calc_type.py  20260506_0005_add_fuel_expense_calculations.py  20260506_0006_benchmark_prices_policy_scope.py  20260506_0007_seed_demo_data_consolidated.py  20260506_0008_benchmark_prices_data_update_egho.py  20260506_0009_policy_reuse_mapping.py  20260506_0010_seed_demo_data_latest.py  20260506_0011_users_and_memberships.py  20260506_0012_seed_invited_membership_demo.py  20260508_0001_widen_fuel_expenses_country_code.py  20260517_0001_add_public_id_uuids.py  20260517_0002_auth_account_management.py  20260517_0003_calculation_details_snapshot.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/internal/: jobs.py
backend/app/api/v1/: aircraft.py  auth.py  auth_email.py  auth_passwords.py  benchmark_prices.py  fuel_expenses.py  fx_rates.py  invoices.py  memberships.py  pilots.py  policy.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: admin_user.py  aircraft.py  aircraft_fuel_policy.py  aircraft_membership.py  all.py  auth_token.py  enums.py  fuel_benchmark_price.py  fuel_expense.py  fuel_expense_calculation.py  fuel_policy.py  fx_rate.py  pilot.py  user.py
backend/app/schemas/: aircraft.py  auth.py  benchmark.py  expense.py  fx.py  membership.py  pilot.py  policy.py
backend/app/services/: ecb_fx.py  email.py  fx.py  invoices.py  refunds.py
backend/fuel_books.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_login_management.py
frontend/: README.md  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AircraftCreateForm.tsx  AircraftCreatedToast.tsx  (+31 more)
(+49 files in other folders)
