[metadata]
name = fuel-books
version = 0.1.0
description = Fuel Books API

[options]
packages = find:
python_requires = >=3.11
# Keep in sync with pyproject.toml [project.dependencies].
install_requires =
    fastapi>=0.115
    uvicorn[standard]>=0.30
    sqlalchemy>=2.0
    alembic>=1.13
    pydantic>=2.8
    pydantic-settings>=2.4
    email-validator>=2.0
    python-jose[cryptography]>=3.3
    passlib[bcrypt]>=1.7
    bcrypt<4
    httpx>=0.27
    python-multipart>=0.0.9
    psycopg[binary]>=3.2
    slowapi>=0.1.9
    reportlab>=4.2

[options.extras_require]
dev =
    pytest>=8.0
    pytest-asyncio>=0.23
    httpx>=0.27
    ruff>=0.5

